--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,8 +42,9 @@
  </nav>   
  
  </section>
-
-
+<div style="overflow-y: hidden;">
+ <app-slider></app-slider>
+</div>
 <section id="services">
   <div class="container">
   <div class="row">
@@ -142,21 +143,21 @@
                 <i class="fa fa-image"></i>
                </div>
                 <h3>Borehole Drilling</h3>
-              <img  class="g-image" src="../assets/img/25e1d583-acdc-4259-b55b-8afe0c9e07ee.jpeg"/>
+              <img  class="g-image hvr-grow" src="../assets/img/25e1d583-acdc-4259-b55b-8afe0c9e07ee.jpeg"/>
            </div>
            <div class="col-md-4 text-center">
                <div class="icon">
                 <i class="fa fa-image"></i>  
                </div>
                 <h3>Tank Installation</h3>
-                <img  class="g-image" src="../assets/img/IMG_1984.jpeg"/>
+                <img  class="g-image hvr-grow" src="../assets/img/IMG_1984.jpeg"/>
            </div>
            <div class="col-md-4 text-center">
                <div class="icon" >
                 <i class="fa fa-image"></i>  
                </div>
                 <h3>Borehole Casing</h3>
-                <img  class="g-image" src="../assets/img/IMG_1988.jpeg"/>
+                <img  class="g-image hvr-grow" src="../assets/img/IMG_1988.jpeg"/>
            </div>
              </div>
         </div> 
