--- a/src/app/compnents/slider/slider.component.html
+++ b/src/app/compnents/slider/slider.component.html
@@ -3,35 +3,36 @@
   
     <div class="banner-top">
         <div class="banner-top-left">
-            <img width="100" src="/src/assets/img/slide1.jpg">
+           <!-- <img src="../../../assets/img/logo.png" width="100px"> -->
         </div>
         <div class="banner-top-right">
-            <div class="search-container"></div>
+            <!-- <div class="search-container"></div>
             <div class="phone-container">
-           
-                0242 779 156</div>
+                <img width="50" height="50" style="height: 200px; object-fit: cover;" src="../../../assets/img/tel-phone-icon-5.png">
+                0242 779 156/7</div> -->
         </div>
     </div>
     <div class="banner-bottom">
         <div class="banner-section-bottom-left">
-            <div class="category-dropdown">Categories</div>
+            <!-- <div class="category-dropdown">Categories</div> -->
         </div>
         <div class="banner-section-bottom-right">
-            <div class="banner-section-menu">
+            <!-- <div class="banner-section-menu">
                 <div class="banner-menu-item" [routerLink]="['/home']" routerLinkActive="router-link-active" >Home</div>
                 <div class="banner-menu-item" [routerLink]="['/products']" routerLinkActive="router-link-active" >Shop</div>
                 <div class="banner-menu-item" [routerLink]="['/services']" routerLinkActive="router-link-active" >Services</div>
                 <div class="banner-menu-item" [routerLink]="['/contact']" routerLinkActive="router-link-active" >Contact</div>
                   
                 
+            </div> -->
+            <div class="banner-heading1" *ngIf="show_slider" [@slideInLeftOnEnter]>{{slides[current_index].heading1}}</div>
+            <div class="banner-heading2" *ngIf="show_slider" [@slideInDownOnEnter]>{{slides[current_index].heading2}}
             </div>
-            <div class="banner-heading1">Promo h1</div>
-            <div class="banner-heading2">Promo h2</div>
-            <div class="banner-heading3">promo h3</div>
-            <div class="banner-action">Get Quote!</div>
+            <div class="banner-heading3" *ngIf="show_slider" [@bounceInOnEnter]>{{slides[current_index].heading3}}</div>
+            <div class="banner-action" *ngIf="show_slider" [@flipInXOnEnter]><a style="text-decoration: none;color: white;" href="#requestquote" >Get Quote!</a> </div>
         </div>
     </div>
-    <div *ngIf="show_slider"  [@fadeInOnEnter] [@fadeOutOnLeave] class="slider-img-container">
-        <img class="slider-img"  [src]='imgs[current_index]'>
+    <div *ngIf="show_slider"  	[@slideInRightOnEnter]	[@slideOutLeftOnLeave] class="slider-img-container">
+        <img class="slider-img"  [src]='slides[current_index].img'>
     </div>
 </div>
